# McPatch2

./: .gitignore  Cargo.toml  WebAPI.md  bd.sh  config.template.toml  deps.txt  design.md  package-lock.json  package.json  readme.md  tailwind.config.js
.cargo/: config.toml
.github/workflows/: build_docs.yml.txt  node.js.yml  release-client.yml  release-manager.yml  release.yml
client/: Cargo.toml
client-dynlib/: Cargo.toml
client-dynlib/src/: lib.rs
client/src/: global_config.rs  lib.rs  log.rs  main.rs  speed_sampler.rs  work.rs
client/src/network/: alist.rs  http.rs  mod.rs  private.rs  webdav.rs
client/src/ui/: main_ui.rs  message_box_ui.rs  mod.rs
config_template_derive/: Cargo.toml
config_template_derive/src/: lib.rs
manager/: Cargo.toml  config.template.toml  deps.txt
manager/src/: app_path.rs  main.rs
manager/src/builtin_server/: mod.rs
manager/src/common/: archive_tester.rs  mod.rs  tar_reader.rs  tar_writer.rs
manager/src/config/: auth_config.rs  builtin_server_config.rs  config.rs  core_config.rs  detail_config.rs  global_config.rs  mod.rs  s3_config.rs  upload_config.rs  user_config.rs  web_config.rs  webdav_config.rs
manager/src/core/: archive_tester.rs  file_hash.rs  mod.rs  tar_reader.rs  tar_writer.rs
manager/src/core/data/: index_file.rs  version_meta.rs  version_meta_group.rs
manager/src/diff/: diff.rs  disk_file.rs  history_file.rs
manager/src/subcommand/: check.rs  combine.rs  mod.rs  pack.rs  revert.rs  serve.rs  test.rs
manager/src/task/: check.rs  combine.rs  mod.rs  pack.rs  revert.rs  sync.rs  test.rs
manager/src/upload/: file_list_cache.rs  mod.rs  s3.rs  webdav.rs
manager/src/utility/: counted_write.rs  io_utils.rs  mod.rs  partial_read.rs  to_detail_error.rs
manager/src/web/: auth_layer.rs  file_status.rs  log.rs  mod.rs  task_executor.rs  token.rs  webstate.rs
manager/src/web/api/: mod.rs
manager/src/web/api/fs/: delete.rs  disk_info.rs  download.rs  extract_file.rs  list.rs  make_directory.rs  mod.rs  move.rs  sign_file.rs  upload.rs
manager/src/web/api/misc/: mod.rs  version_list.rs
manager/src/web/api/public/: mod.rs
manager/src/web/api/task/: check.rs  combine.rs  mod.rs  pack.rs  revert.rs  sync.rs  test.rs  upload.rs
manager/src/web/api/terminal/: full.rs  mod.rs  more.rs
manager/src/web/api/user/: change_password.rs  change_username.rs  check_token.rs  login.rs  logout.rs  mod.rs
manager/src/web/api/webpage/: mod.rs
manager/src/web/cmd/: check.rs  combine.rs  mod.rs  pack.rs  revert.rs  test.rs
manager/src/web/fs/: delete.rs  disk_info.rs  download.rs  list.rs  make_directory.rs  mod.rs  upload.rs
manager/src/web/io/: console_full.rs  console_more.rs  mod.rs
manager/test/: config.toml  user.toml
mcpatch-client/: Cargo.toml  build.rs
mcpatch-client/src/: error.rs  global_config.rs  lib.rs  log.rs  main.rs  net.rs  speed_sampler.rs  ui.rs  utils.rs  work.rs
mcpatch-client/src/network/: http.rs  mod.rs  private.rs  webdav.rs
mcpatch-client/src/utility/: limited_read_async.rs  mod.rs
mcpatch-manager/: Cargo.toml  build.rs  config.template.toml
mcpatch-manager/src/: main.rs
mcpatch-manager/src/common/: archive_tester.rs  mod.rs  rule_filter.rs  tar_reader.rs  tar_writer.rs
mcpatch-manager/src/diff/: diff.rs  disk_file.rs  history_file.rs  mod.rs
mcpatch-manager/src/subcommand/: check.rs  combine.rs  mod.rs  pack.rs  revert.rs  serve.rs  test.rs
mcpatch-manager/src/utility/: mod.rs  traffic_control.rs
mcpatch-shared/: Cargo.toml
mcpatch-shared/src/: lib.rs
mcpatch-shared/src/common/: file_hash.rs
mcpatch-shared/src/data/: index_file.rs  version_meta.rs
mcpatch-shared/src/diff/: abstract_file.rs  disk_file.rs
mcpatch-shared/src/utility/: mod.rs  partial_read.rs  vec_ext.rs
minio/: Cargo.toml
minio/src/s3/: http.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/common/: mod.rs
shared/src/data/: version_meta_group.rs
shared/src/utility/: mod.rs  partial_read.rs  vec_ext.rs
src/: main.jsx  main.rs
src/api/: fileManager.js  fs.js  misc.js  task.js  user.js
src/assets/: index.css
src/common/: archive_tester.rs  file_hash.rs  mod.rs  tar_reader.rs  tar_writer.rs  version_reader.rs  version_writer.rs
src/components/FileBreadcrumb/: index.jsx
src/components/FolderButtonGroup/: index.jsx
src/components/TileViewFileExplorer/: index.css  index.jsx
src/components/TileViewFileExplorer/FileItem/: index.jsx
src/data/: index_file.rs  mod.rs  version_meta.rs  version_meta_group.rs
src/diff/: abstract_file.rs  diff.rs  disk_file.rs  history_file.rs  mod.rs  rule_filter.rs
src/pages/: App.jsx
src/pages/Dashboar/Folde/: index.jsx
src/pages/Dashboard/: index.jsx
src/pages/Dashboard/Folder/: index.jsx
src/pages/Dashboard/Help/: index.jsx
src/pages/Dashboard/Log/: index.jsx
src/pages/Dashboard/Overview/: index.jsx
src/pages/Dashboard/Settings/: index.jsx
src/pages/Home/: index.jsx
src/pages/Login/: index.jsx
src/pages/NotFound/: index.jsx
src/pages/dashboard/: index.jsx
src/pages/dashboard/folder/: index.jsx
src/pages/dashboard/help/: index.jsx
src/pages/dashboard/log/: index.jsx
src/pages/dashboard/overview/: index.jsx
src/pages/home/: index.jsx
src/pages/login/: index.jsx
src/pages/not-found/: index.jsx
src/router/: index.jsx
src/store/: index.js
src/store/modules/: userStore.js
src/subcommand/: check.rs  combine.rs  mod.rs  pack.rs  sync.rs  test.rs
src/utility/: counted_write.rs  ext.rs  limited_read.rs  mod.rs  tc.rs
src/utility/extension/: filename.rs  mod.rs
src/utils/: request.js  tool.js
web/: .env.development  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: main.jsx
web/src/api/: fs.js  task.js  terminal.js  user.js
web/src/assets/: index.css
web/src/components/FileBreadcrumb/: index.jsx
web/src/components/FolderButtonGroup/: index.jsx
web/src/components/TileViewFileExplorer/: index.jsx
web/src/pages/Dashboard/: index.jsx
web/src/utils/: request.js  tool.js
xtask/: Cargo.toml
xtask/src/: main.rs
(+3 files in other folders)
