[workspace]
resolver = "2"
members = [
    "config_template_derive",
    "shared",
    "manager", 
    "client", 
    "xtask",
    "client-dynlib"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
crc = "3.0.1"
json = "0.12.4"
tokio = { version = "1.36.0", features = ["full"] }
sha1 = "0.10.6"
chrono = {version = "0.4.31", features = ["clock"]}

[profile.release]
debug = "line-directives-only"
split-debuginfo = "packed"
overflow-checks = true
