[package]
name = "config_template_derive"
version = "0.0.1"
edition.workspace = true
description = "the generator of the config file template for client"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = "1.0"
quote = "1.0.35"
syn = "2.0.52"