[package]
name = "manager"
version = "0.0.1"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "../shared" }
chrono = { workspace = true }
tokio = { workspace = true }
# clap = { version = "4.4.18", features = ["derive", "env"] }
axum = { version = "0.7.7", features = ["multipart"] }
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["serde_derive"] }
tar = "0.4.40"
tinytemplate = "1.2.1"
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
toml = "0.7.3"
tower-http = { version = "0.6.1", features = ["cors"] }
serde_json = "1.0.133"
tower-layer = "0.3.3"
tower-service = "0.3.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"
