[package]
name = "manager"
version = "0.0.1"
edition.workspace = true

[features]
default = []
bundle-webpage = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "../shared" }
chrono = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.7.7", features = ["multipart", "macros"] }
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["serde_derive"] }
tar = "0.4.40"
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
toml = "0.7.3"
tower-http = { version = "0.6.1", features = ["cors"] }
serde_json = "1.0.133"
tower-layer = "0.3.3"
tower-service = "0.3.3"
rand = "0.8.5"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
sysinfo = "0.32.0"
base64ct = { version = "1.6.0", features = ["alloc"] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
urlencoding = "2.1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
reqwest_dav = "0.1.11"
minio = "0.1.0"
include_dir = "0.7.4"
mime_guess = "2.0.5"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"
