[package]
name = "mcpatch-client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcpatch-shared = { path = "../mcpatch-shared" }
config_template_derive = { path = "../config_template_derive" }

chrono = { workspace = true }
json = { workspace = true }
tokio = { workspace = true }

async-trait = "0.1.79"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["gzip", "json", "deflate", "brotli"] }
yaml-rust = "0.4.5"
eframe = "0.27.2"
egui = "0.27.2"
