[package]
name = "mcpatch-manager"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mcpatch-shared = { path = "../mcpatch-shared" }
tokio = { workspace = true }

clap = { version = "4.4.18", features = ["derive", "env"] }
serde = {version = "1.0.196", features = ["serde_derive"] }
toml = "0.7.3"
tar = "0.4.40"