[package]
name = "mcpatch-manager"
version = "0.0.1"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mcpatch-shared = { path = "../mcpatch-shared" }
chrono = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.4.18", features = ["derive", "env"] }
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["serde_derive"] }
tar = "0.4.40"
tinytemplate = "1.2.1"
toml = "0.7.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"