[package]
name = "mcpatch-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = { workspace = true }
crc = { workspace = true }
chrono = {version = "0.4.31", features = ["clock"]}
regex = "1.10.3"
tokio = { workspace = true }